feat: enhance CategoryResponseDTO to include attributeIds and update CategoryServiceImpl for attribute management